[package]
name = "aoc-2021-20-trenchmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
indoc = "1.0"
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_info" ] }
nom = "7"
itertools = "0.10.3"

[dev-dependencies]
test-log= "0.2.*"